# inaxs

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg  setup.py
inaxs/: parse_files.py
