# setup.cfg
[metadata]
name = inaxs
description = lint common markdown files for accessibility errors
version = 0.0.1
author = Rich Leyshon
author_email = richard.leyshon@ons.gov.uk
license = MIT
url = https://github.com/r-leyshon/inaxs

[options]
python_requires = >=3.9.10

[options.packages.find]
package_dir = ./inaxs

[options.entry_points]
console_scripts =
    print-arguments = inaxs.parse_files:main
